--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3"
 
 services:
-  broker-service:
-    build:
-      context: ./../broker-service
-      dockerfile: ./../broker-service/broker-service.dockerfile
-    restart: always
-    ports:
-      - "8081:81"
-    deploy:
-      mode: replicated
-      replicas: 1
+  # broker-service:
+  #   build:
+  #     context: ./../broker-service
+  #     dockerfile: ./../broker-service/broker-service.dockerfile
+  #   restart: always
+  #   ports:
+  #     - "8081:81"
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
 
   authentication-service:
     build:
